--- a/MixablyMac/Mixably.storyboard
+++ b/MixablyMac/Mixably.storyboard
@@ -138,7 +138,7 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="gvc-Be-RY3" viewBased="YES" id="f2r-N6-IFd">
-                                            <rect key="frame" x="0.0" y="0.0" width="450" height="283"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="450" height="277"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
@@ -328,6 +328,7 @@
                                             <connections>
                                                 <binding destination="1up-Kv-Eej" name="content" keyPath="arrangedObjects" id="m2M-3g-M0v"/>
                                                 <outlet property="dataSource" destination="bf0-MY-G1j" id="Xp6-yE-dvi"/>
+                                                <outlet property="delegate" destination="bf0-MY-G1j" id="f4N-cJ-IZM"/>
                                             </connections>
                                         </tableView>
                                     </subviews>
@@ -342,7 +343,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" id="gvc-Be-RY3">
-                                    <rect key="frame" x="0.0" y="0.0" width="450" height="17"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="450" height="23"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
